compute heading (compare compass)